--- a/.env.example
+++ b/.env.example
@@ -1,76 +1,79 @@
 # VibeDoc Agent Application Environment Variables
-# Agent application environment variable configuration file
+# Agent应用环境变量配置文件
 
 # =========================
-# 🔑 REQUIRED CONFIGURATIONS
+# 🔑 REQUIRED CONFIGURATIONS (必填配置)
 # =========================
 
-# Silicon Flow API Key for AI model access (Required)
-# Get it from: https://siliconflow.cn
-# Purpose: Core service for AI development plan generation
+# Silicon Flow API Key for AI model access (必填)
+# 获取地址: https://siliconflow.cn
+# 用途: AI开发计划生成的核心服务
 SILICONFLOW_API_KEY=your_siliconflow_api_key_here
 
-# Application port
+# Application port (应用端口)
 PORT=7860
 
-# Runtime environment
+# Runtime environment (运行环境)
 ENVIRONMENT=production
 
 # =========================
-# 🔌 OPTIONAL MCP SERVICE CONFIGURATIONS
+# 🔌 OPTIONAL MCP SERVICE CONFIGURATIONS (可选MCP服务配置)
 # =========================
 
-# 💡 Note: As an Agent application, VibeDoc can call multiple MCP services to enhance functionality
-# These configurations are all optional - the system will gracefully degrade if not configured
+# 💡 说明：作为Agent应用，VibeDoc可以调用多个MCP服务来增强功能
+# 这些配置都是可选的，未配置时系统会优雅降级
 
-# DeepWiki MCP Service (DeepWiki content parsing service)
-# Used to parse deepwiki.org links, providing in-depth technical documentation
+# DeepWiki MCP Service (DeepWiki内容解析服务)
+# 用于解析 deepwiki.org 链接，提供深度技术文档
 # DEEPWIKI_MCP_URL=https://your-mcp-service-url/deepwiki
 
-# Fetch MCP Service (General web scraping service)
-# Used to parse general web links (GitHub, blogs, documentation, etc.)
+# Fetch MCP Service (通用网页抓取服务)  
+# 用于解析普通网页链接 (GitHub、博客、文档等)
 # FETCH_MCP_URL=https://your-mcp-service-url/fetch
 
 # =========================
-# ⚙️ APPLICATION SETTINGS
+# ⚙️ APPLICATION SETTINGS (应用配置)
 # =========================
 
-# Logging level
+# Logging level (日志级别)
 LOG_LEVEL=INFO
 
-# API request timeout in seconds
+# API request timeout in seconds (API超时时间)
 API_TIMEOUT=300
 
-# MCP service timeout in seconds
+# MCP service timeout in seconds (MCP服务超时时间)
 MCP_TIMEOUT=120
 
-# Debug mode
+# Debug mode (调试模式)
+DEBUG=false
+
+# Debug mode (调试模式)
 DEBUG=false
 
 # =========================
-# 📋 AGENT APPLICATION NOTES
+# 📋 AGENT APPLICATION NOTES (Agent应用说明)
 # =========================
 
-# 🤖 Agent vs MCP Difference:
-# • Agent Application: Calls multiple MCP services, provides complete business solution
-# • MCP Service: Called by Agent, provides specific functional components
-# • VibeDoc is an Agent application, demonstrating intelligent routing and service collaboration
+# 🤖 Agent vs MCP区别：
+# • Agent应用：调用多个MCP服务，提供完整业务解决方案
+# • MCP服务：被Agent调用，提供特定功能组件
+# • VibeDoc是Agent应用，展示智能路由和服务协作能力
 
-# 🚀 Quick deployment to ModelScope:
-# 1. Add environment variables in space settings
-# 2. Required: SILICONFLOW_API_KEY, PORT, NODE_ENV
-# 3. Optional: MCP service configurations (enhanced features)
-# 4. SDK selection: Gradio
-# 5. Startup file: app.py
+# 🚀 快速部署到魔塔：
+# 1. 在创空间设置中添加环境变量
+# 2. 必填：SILICONFLOW_API_KEY, PORT, NODE_ENV  
+# 3. 可选：MCP服务配置（增强功能）
+# 4. SDK选择：Gradio
+# 5. 启动文件：app.py
 
-# 🔧 Feature Highlights:
-# • Intelligent MCP service routing
-# • Multi-source knowledge fusion
-# • Fault-tolerant degradation mechanism
-# • Complete development plan generation
-# • AI coding prompt output
+# 🔧 功能特色：
+# • 智能MCP服务路由
+# • 多源知识融合
+# • 容错降级机制
+# • 完整开发计划生成
+# • AI编程提示词输出
 
-# ⚠️ Security Reminders:
-# • Don't commit real API keys to Git
-# • Use environment variables in production
-# • Regularly rotate API keys
+# ⚠️ 安全提醒：
+# • 不要将真实API密钥提交到Git
+# • 生产环境使用环境变量配置
+# • 定期更换API密钥
